# greft

./: CHANGELOG.md  CLAUDE.md  FORMAT.md  README.md
.github/workflows/: ci.yml
bench/native-core/: .gitignore  Cargo.toml  README.md  bench.py  build.sh  gen_payload.py
bench/native-core/src/: lib.rs
conformance/: README.md
conformance/go/: README.md  conformance_test.go  decode.go  encode.go  go.mod  match.go  run.go
conformance/js/: README.md  run.ts
conformance/python/: README.md  decode.py  encode.py  roundtrip.py  run.py
conformance/rust/: Cargo.toml  README.md
conformance/rust/src/: decode.rs  encode.rs  json.rs  lib.rs  main.rs  matcher.rs  value.rs
conformance/rust/tests/: conformance.rs  roundtrip.rs
docs/: RELEASING.md
js/: .oxlintrc.json  README.md  package.json  pnpm-lock.yaml  tsconfig.json  tsdown.config.ts
js/scripts/: gen-golden.ts
js/src/: buffer.ts  cli.ts  decode.ts  encode.ts  extension.ts  format.ts  index.ts  json-bridge.ts
js/test/: cli.test.ts  errors.test.ts  extension.test.ts  json-bridge.test.ts  property.test.ts  roundtrip.test.ts  roundtrip.ts
spec/: FORMAT.md
spec/golden/: bigint.meta.json  bytes.meta.json  cycles.meta.json  dataview.meta.json  date.meta.json  error.meta.json  map_set.meta.json  primitive.meta.json  regexp.meta.json  string.meta.json  symbol.meta.json  typedarray.meta.json  url.meta.json
